# section_design_checks

./: .gitignore  BIAXIAL_MN_SURFACE.md  CHANGELOG.md  CODE_CHECKS_GUIDE.md  GETTING_STARTED.md  LICENSE  M-N_DIAGRAM_IMPLEMENTATION.md  README.md  SAVE_LOAD_SECTIONS.md  TEST_RESULTS_FINAL.md  TEST_SUMMARY.md  TODO.md  _diag_tension_sweep.py  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  test_jacobian_accuracy.py  test_lever_arm_capping_warning.py  test_sanity_checks.py  test_stress_continuity.py  test_tension_stiffening_jacobian.py
.github/workflows/: ci.yml  release.yml
benchmarks/: __init__.py  __main__.py  _benchmark_maker.ipynb  bench_circular.py  plotting.py  runner.py  sbd_1.json  sbd_2.json  schemas.py
benchmarks/results/: sbd_1_results.json  sbd_2_results.json
docs/: README.md
examples/: README.md  beam_analysis.py  biaxial_mn_interaction_tutorial.ipynb  circular_section_check_demonstration.ipynb  circular_shear_viewer_demonstration.ipynb  circular_vs_standard_shear.ipynb  code_checks_example.py  compare_utilization_methods.py  crack_width_viewer_demonstration.ipynb  cracking_moment_vs_solver_comparison.ipynb  ec2_code_checks_demonstration.ipynb  example_accidental_limit_state.py  example_biaxial_surface.py  example_export_mn_diagram.py  example_save_load_section.py  generate_mn_diagram_figure.py  generate_release_plots.py  m_n_interaction_diagram_tutorial.ipynb  ndp_demonstration.ipynb  rc_beam_example.py  section_example.ipynb  shear_comparison.ipynb  shear_viewer_demonstration.ipynb  square_column_biaxial_surface.csv  square_column_biaxial_surface.json  strain_state_1d_vs_2d_demonstration.ipynb  tension_shift_demonstration.ipynb
materials/: __init__.py
materials/api/: __init__.py
materials/api/models/: __init__.py
materials/core/: __init__.py  base_material.py  constitutive.py  geometry.py  units.py
materials/reinforced_concrete/: __init__.py
materials/reinforced_concrete/analysis/: __init__.py  biaxial_interaction.py  biaxial_interaction_viewer.py  circular_shear_viewer.py  crack_width_viewer.py  free_na_adapter.py  interaction_diagram.py  mn_diagram_viewer.py  parallel_batch_solver.py  shear_viewer.py  strain_state.py  stress_strain_viewer.py
materials/reinforced_concrete/code_checks/: base_check.py
materials/reinforced_concrete/constitutive/: __init__.py  concrete_stress_strain.py  custom_constitutive.py  steel_stress_strain.py
materials/reinforced_concrete/geometry/: __init__.py  fiber_mesh.py  fibre_mesh.py  rebar_layer.py  reinforcement_reconcile.py  section.py  section_utils.py  section_viewer.py
materials/reinforced_concrete/materials/: __init__.py  concrete.py  concrete_age.py  rebar.py  reinforcing_steel.py
materials/reinforced_concrete/ndp/: __init__.py  ndp.py
materials/reinforced_concrete/thermal/: __init__.py  adiabatic_temperature.py  binder.py  concrete_mix.py
materials/utils/: helpers.py
section_design_checks/: __init__.py
section_design_checks/api/: __init__.py
section_design_checks/core/: __init__.py  base_material.py  constitutive.py  units.py
section_design_checks/reinforced_concrete/: __init__.py
section_design_checks/reinforced_concrete/analysis/: __init__.py  biaxial_interaction.py  biaxial_interaction_viewer.py  circular_shear_viewer.py  crack_width_viewer.py  free_na_adapter.py  interaction_diagram.py  mn_diagram_viewer.py  parallel_batch_solver.py  (+3 more)
tests/: README.md  conftest.py  test_analytical_jacobian.py  test_analytical_jacobian_extreme_cases.py  test_biaxial_surface_intersection.py  test_confined_concrete_tension_stiffening.py  test_confined_ultimate_strain.py  test_edge_cases_error_handling.py  test_final_pivot_plot.py  test_initial_guess_quality.py  test_inverse_solver.py  test_inverse_solver_robustness.py  test_jacobian_accuracy.py  test_lever_arm_capping_warning.py  test_lever_arm_fallback.py  test_mn_interaction_compression_face.py  test_new_shear_api.py  test_optional_moment.py  test_parallel_batch_solver.py  test_pivot_method.py  test_pivot_validation.py  test_pivot_visualization.py  test_rebar_clash_and_remove.py  test_sanity_checks.py  test_shear_edge_cases.py  test_solver_optimization.py  test_solver_review_fixes.py  test_stress_continuity.py  test_surface_quality.py  test_tangent_modulus_validation.py  test_tension_shift_cot_max_override.py  test_tension_stiffening_jacobian.py  test_vectorization_performance.py
tests/integration/: README.md  test_biaxial_utilization_vector.py  test_rugby_ball_surface.py
tests/test_api/: test_package_exports.py
tests/test_core/: test_base_material.py  test_constitutive.py  test_geometry.py  test_units.py
tests/test_reinforced_concrete/: README.md  test_base_check.py  test_bending_check.py  test_bending_check_tension_shift.py  test_biaxial_interaction.py  test_biaxial_interaction_unit.py  test_circular_section_check.py  test_circular_section_check_unit.py  test_concrete_age.py  test_concrete_material.py  test_concrete_stress_strain.py  test_crack_width_viewer.py  test_cracking_check.py  test_cracking_modular_ratio.py  test_custom_constitutive.py  test_fiber_mesh.py  test_fibre_mesh.py  test_flexure_utils.py  test_interaction_diagram.py  test_interaction_diagram_additional_branches.py  test_mn_diagram_viewer.py  test_ndp_registry.py  test_ndp_spacing_helpers.py  test_parallel_batch_solver_unit.py  test_rebar.py  test_rebar_layer_helpers.py  test_reinforcement_reconcile_fallback.py  test_reinforcing_steel.py  test_section.py  test_section_additional_branches.py  test_section_utils.py  test_section_viewer.py  test_shear_check.py  test_shear_check_unit.py  test_shear_utils.py  test_steel_stress_strain.py  test_stress_limits_check.py  test_stress_strain_viewer.py  test_thermal_models.py
tests/test_utils/: __init__.py  test_helpers.py
(+91 files in other folders)
