[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "materials"
version = "0.1.0"
description = "API-ready library for structural materials and code-checked section design"
authors = [
    {name = "Joe B", email = "jsb2505@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["structural engineering", "reinforced concrete", "eurocode", "materials"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "shapely>=2.0.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
viz = [
    "matplotlib>=3.7.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]

[project.urls]
Homepage = "https://github.com/jsb2505/section_design_checks"
Documentation = "https://github.com/jsb2505/section_design_checks/blob/main/README.md"
Repository = "https://github.com/jsb2505/section_design_checks"

[tool.setuptools.packages.find]
where = ["."]
include = ["materials*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
# This is a structural-engineering library: variable/argument/function names
# deliberately follow Eurocode notation (N_Ed, V_Rd, M_cap, A_s, f_cd, ...),
# so the pep8-naming rules that forbid non-lowercase identifiers are disabled.
# They are domain-correct, not debt.
ignore = [
    "N802",  # function name not lowercase (e.g. find_V_Rd_c)
    "N803",  # argument name not lowercase (e.g. N_Ed, My_Ed)
    "N806",  # local variable not lowercase (e.g. M_cap, A_s)
    "N815",  # mixedCase class variable
    "N816",  # mixedCase global
]

[tool.ruff.lint.per-file-ignores]
# Tests favour readability over import hygiene/line length.
"tests/**" = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

# pytest configuration lives in pytest.ini (the single source of truth).
# A [tool.pytest.ini_options] block here is silently ignored by pytest whenever
# pytest.ini exists, so it must not be reintroduced.
